# cpp-grpc-demo

./: .gitignore  CMakeLists.txt  README.md  gen_grpc_code.sh  install_dependencies.sh  install_grpc.sh
src/: Makefile  helloworld.client.cc  helloworld.proto  helloworld.server.cc
